[project]
name = "mass-feedback"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agentmail>=0.0.24",
    "agentmail-mcp>=0.3.0",
    "agentmail-toolkit>=0.1.8",
    "dolphin-mcp>=0.1.3",
    "flask>=3.1.1",
    "mcp-client>=0.0.0",
    "pyrefly>=0.17.1",
    "requests>=2.32.3",
]
[tool.pyrefly]
project_includes = ["**/*"]
project_excludes = [
    "**/.[!/.]*",
    "**/*venv/**/*",
]
